# blake3-js

./: README.md  bench.ts  blake3-wasm-simd.ts  blake3-workers.ts  blake3.ts  browser-bench.html  deno-bench.ts  index.ts
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
www/: blake3_wasm.js  blake3_wasm_bg.wasm  blake3_wasm_bg.wasm.d.ts  index.html  nginx.conf  nginx.conf.example  npm-example.html  package.json  serve.py
