[package]
name = "blake3-wasm"
version = "0.1.0"
edition = "2021"
description = "Blake3 WASM with Rayon parallelism"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = { version = "1.5", features = ["rayon"] }
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
rayon = "1.10"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
